changed nav a padding to correct aligning issue

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ nav li {
 
 nav a {
   font-weight: 800;
-  padding: 15px 18px;
+  padding: 15px 8px;
 }
 
 
